syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcGreeter.Protos";

service Customer {
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
	rpc GetNewCustomers (google.protobuf.Empty) returns (stream CustomerModel);
}

message CustomerLookupModel {
	int32 userId = 1;
}

message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string emailAdress = 3;
	bool isAlive = 4;
	int32 age = 5;
}